--- a/CSS revision/Revise/style.css
+++ b/CSS revision/Revise/style.css
@@ -19,6 +19,8 @@ button {
 
 body {
     background-color: yellow;
+    margin:0;
+    padding:0;
 }
 
 hr {
@@ -89,5 +91,51 @@ a {
 
 #Box3 {
     background-color: blue;
+}
+
+
+.position {
+    height:100px;
+    width:100px;
+    border: 5px solid black;
+    display: inline-block;
+    background-color: blue;
+}
+
+#p1 {
+    background-image: url("notebook.jpg");
+    background-size: cover;
+}
+
+/*#p2 {*/
+/*    position: relative;*/
+/*    top:10px;*/
+/*    margin:10px;*/
+/*}*/
+
+/*#p3 {*/
+/*    position: absolute;*/
+/*    right:10px;*/
+/*    margin:10px;*/
+
+/*}*/
+
+/*#p4 {*/
+/*    position: fixed;*/
+/*    width: 100%;*/
+/*    bottom:0;*/
+/*    left:0;*/
+/*    height:50px;*/
+/*}*/
+
+#practice5 {
+    height: 100px;
+    width: 100px;
+    position: fixed;
+    right: 10px;
+    bottom: 0px;
+    background-image: url("notebook.jpg");
+    background-size: cover;
+
 }
 
