--- a/CSS revision/Sample/style.css
+++ b/CSS revision/Sample/style.css
@@ -7,6 +7,9 @@
 #navbar {
     background-color: #0f1111;
     height: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #heading {
@@ -18,10 +21,35 @@ button {
     background-color: #f08804;
 }
 
-.navHeading {
-    margin-right: 200px;
-}
-
 a {
     text-decoration: none;
+}
+
+#M1 {
+    background-color: rgba(255,0,0,0.5);
+}
+
+#M2 {
+    background-color: rgba(0,255,0,0.5);
+}
+
+#M3 {
+    background-color: rgba(0,0,255,0.5);
+}
+
+.mainDiv {
+    height: 100px;
+    width: 100px;
+    border: 5px solid black;
+    margin: 100px;
+    padding: 10px;
+}
+
+#content {
+    height: 700px;
+}
+
+footer {
+    background-color: #0f1111;
+    color: white;
 }
