--- a/CSS revision/Amazon/style.css
+++ b/CSS revision/Amazon/style.css
@@ -10,18 +10,9 @@
     color: white;
     display: flex;
     align-items: center;
-    /*justify-content: space-evenly;*/
+    justify-content: space-between;
 
 }
-
-.nav-logo {
-    height:50px;
-    width:100px;
-    background-image: url("amazon-logo.jpg");
-    background-size: cover;
-}
-
-
 
 .border {
     border: 1.5px solid transparent;
@@ -31,46 +22,60 @@
     border: 1.5px solid white;
 }
 
-.nav-address {
-    height:50px;
-    width:100px;
-    align-content: center;
+/* Box1 */
+
+.nav-logo {
+    height:90%;
+    width:7%;
+    background-image: url("amazon-logo.jpg");
+    background-size: cover;
 }
 
+/*Box 2*/
+
+.nav-address {
+    height:90%;
+    padding: 10px;
+}
+
+.add-icon {
+    display: flex;
+    align-items: center;
+}
+
+.icon1 {
+    font-size: 0.8rem;
+}
 
 .add-first {
     color: #cccccc;
     font-size: 0.85rem;
-    margin-left: 15px;
-
 }
 
 .add-second {
     font-size: 1rem;
 }
 
-.add-icon {
-    display: flex;
-    align-items: center;
-    margin-left: 15px;
-}
-
-
+/*Box 3*/
 
 .nav-search {
     display: flex;
-    background-color: #e8e852;
-    width: 620px;
-    height: 40px;
+    width: 50%;
+    height: 90%;
     border-radius: 5px;
+    border: 3px solid transparent;
+}
+
+.nav-search:hover {
+    border: 3px solid orange;
 }
 
 .search-select {
     background-color: #f3f3f3;
-    width: 50px;
+    width: 8.5%;
     text-align: center;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
     border: none;
 }
 
@@ -81,25 +86,147 @@
 }
 
 .search-icon {
-    width:50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #eded5c;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    width:8.5%;
+    padding-top: 1rem;
+    padding-left: 1.2rem;
+    background-color: orange;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 
-.nav-signin {
-    height:40px;
-    align-content: center;
+/*Box4 & Box5*/
+
+.nav-signin-return {
+    height:90%;
+    padding: 10px;
 }
 
 .nav-first {
-    font-size: 0.7rem;
+    font-size: 0.75rem;
 }
 
 .nav-second {
     font-size: 0.85rem;
     font-weight: 700;
 }
+
+/*Box6*/
+
+.nav-cart {
+    height: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+
+}
+
+.cart-text {
+    font-size: 0.8rem;
+    font-weight: 700;
+}
+
+.icon2 {
+    font-size: 1.5rem;
+}
+
+
+
+/*Panel*/
+
+
+
+.panel {
+    height:40px;
+    background-color: #111147;
+    font-weight: 700;
+    color:white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.panel-all {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.panel-all-icon {
+    font-size: 1.2rem;
+}
+
+.panel-all-text {
+    margin-left: 15%;
+    font-size: 0.8rem;
+}
+
+.panel-options {
+    width: 70%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+}
+
+.panel-items {
+    margin-right: 4%;
+    height: 90%;
+    padding: 5px;
+}
+
+.panel-deals {
+    height: 90%;
+    padding:5px;
+}
+
+.hero-section {
+    height: 350px;
+    background-image: url("hero-image.jpg");
+    background-size: cover;
+}
+
+.hero-text {
+    height: 8%;
+    background-color: #ffffff;
+    width: 80%;
+    margin-left: 10%;
+    padding: 8px;
+    text-align: center;
+    position: relative;
+    top: 80%;
+    font-weight: 600;
+}
+
+.category-section {
+    background-color: lightgrey;
+    height: 375px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.box {
+    width: 23%;
+    height: 90%;
+    padding: 15px;
+    background-color: white;
+    margin-top: 2%;
+}
+
+.boxes-images {
+    margin-top: 3%;
+    width: 95%;
+    height: 80%;
+}
+
+.shop-link {
+    text-decoration: underline;
+    color: cornflowerblue;
+    padding: 0.5em;
+}
+
+
+
+
